[package]
name = "re1v1"
version = "0.1.0"
edition = "2021"

[lib]
name = "re1v1"
crate-type = ["staticlib"]
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
